Update portfolio details and project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Your Name — Portfolio</title>
+    <title>meow</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -46,21 +46,21 @@
 
       <section id="about" class="container section about">
         <h3>About</h3>
-        <p>I’m learning C++ and exploring game development. I enjoy games, cats, and collecting games on Steam.</p>
+        <p>I`m learning C++ and exploring game development. I enjoy games, cats, and collecting games on Steam.</p>
       </section>
 
       <section id="projects" class="container section projects">
         <h3>Projects</h3>
         <ul class="project-list">
           <li class="project-item">
-            <h4>Project One</h4>
-            <p>Short description and a link to the project or repo.</p>
-            <p><a href="#">View</a> • <a href="#">Source</a></p>
+            <h4>cpp</h4>
+            <p>a repo of C++ programs written by me</p>
+            <p><a href="https://github.com/santakameow/cpp">View</a> • <a href="https://github.com/santakameow/cpp">Source</a></p>
           </li>
           <li class="project-item">
-            <h4>Project Two</h4>
-            <p>Short description and technologies used.</p>
-            <p><a href="#">View</a> • <a href="#">Source</a></p>
+            <h4>site</h4>
+            <p>My personal website built with HTML, CSS, and JavaScript.</p>
+            <p><a href="https://sakanai.space/">View</a> • <a href="https://github.com/santakameow/sakanai.space">Source</a></p>
           </li>
         </ul>
       </section>
